--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,6 @@
     <!-- Locally hosted demo server -->
     <script src="http://localhost:8081/webpack-dev-server.js"></script>
     <!-- Demo build of component -->
-    <script src="../build/dev.component-name.js"></script>
+    <script src="../build/dev.slider.js"></script>
 </body>
 </html>
